--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,3 @@
-   
 *,
 *::after,
 *::before {
@@ -16,7 +15,19 @@ li {
 }
 a {
   text-decoration: none;
-  color: black;
+}
+
+.nav__item {
+  color: white;
+  font-size: 20px;
+}
+
+.nav__button {
+  color: white;
+  font-size: 20px;
+  padding: 0;
+  border: none;
+  background: none;
 }
 
 .nav {
@@ -58,7 +69,7 @@ a {
     top: 7vh;
     right: 0;
     height: 35vh;
-    width: 65vw;
+    width: 50vw;
     background: rgb(0, 33, 65);
     flex-direction: column;
     transform: translateX(100%);
