--- a/src/pages/NewGoalPage/NewGoalPage.css
+++ b/src/pages/NewGoalPage/NewGoalPage.css
@@ -1,90 +1,152 @@
-
-.form{
-    background-color: #FFFFFF;
-    width: 600px;
-   
-    margin: 7em auto;
-    border-radius: 1.5em;
-    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+label {
+  font-size: 18px;
 }
 
-.new-goal{
-    display: flex;
-    flex-direction: column;
-    margin-top: 3rem;
-}
-.goals{
-    margin-top: 5rem;
+.edit-title{
+   padding-top: rem; 
 }
 
-.goals-radio{
-    display: flex;
-    
-    flex-direction: column;
+.detail-title{
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.goal-title{
+    padding-top: 1.5rem;
+}
+
+.menu{
+      display: flex;
+      justify-content: space-between;
+  }
+
+.form {
+  background-color: #ffffff;
+  width: 600px;
+
+  margin: 2em auto;
+  border-radius: 1.5em;
+  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
+
+.new-goal {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+}
+.goals {
+  margin-top: 5rem;
+}
+
+.goals-radio {
+  display: flex;
+
+  flex-direction: column;
 }
 
 .un {
-    width: 76%;
-    color: rgb(38, 50, 56);
-    font-weight: 700;
-    font-size: 14px;
-    letter-spacing: 1px;
-    background: rgba(136, 126, 126, 0.04);
-    padding: 10px 20px;
-    border: none;
-    border-radius: 20px;
-    outline: none;
-    box-sizing: border-box;
-    border: 2px solid rgba(0, 0, 0, 0.02);
-    margin-bottom: 50px;
-    text-align: center;
-    margin-bottom: 27px;
-    font-family: 'Ubuntu', sans-serif;
-    }
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-family: "Ubuntu", sans-serif;
+}
 
-    .often {
-        width: 20%;
-        color: rgb(38, 50, 56);
-        font-weight: 700;
-        font-size: 14px;
-        letter-spacing: 1px;
-        background: rgba(136, 126, 126, 0.04);
-        padding: 10px 20px;
-        border: none;
-        border-radius: 20px;
-        outline: none;
-        box-sizing: border-box;
-        border: 2px solid rgba(0, 0, 0, 0.02);
-        margin-bottom: 50px;
-        text-align: center;
-        margin-bottom: 27px;
-        font-family: 'Ubuntu', sans-serif;
-        }
+.often {
+  width: 20%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-family: "Ubuntu", sans-serif;
+}
 
-    .submit {
-        cursor: pointer;
-          border-radius: 5em;
-          color: #fff;
-          background: linear-gradient(to right, #9C27B0, #E040FB);
-          border: 0;
-          padding-left: 40px;
-          padding-right: 40px;
-          padding-bottom: 10px;
-          padding-top: 10px;
-          font-family: 'Ubuntu', sans-serif;
-          font-size: 13px;
-          box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
-          margin-top: 2rem;
-          margin-bottom: 2rem;
-      }
+.submit {
+  cursor: pointer;
+  border-radius: 5em;
+  color: #fff;
+  background: linear-gradient(to right, #9c27b0, #e040fb);
+  border: 0;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 16px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
 
+/* this is a dumb way to do it i know */
 
-    @media (max-width: 600px) {
-        .form{
-            background-color: #FFFFFF;
-            width: 90%;
-           
-            border-radius: 1.5em;
-            box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
-        }
-    }
+.trash-css{
+    display: flex;
+    margin-left: 7rem;
+}
+
+.back {
+    cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: linear-gradient(to right, #9c27b0, #e040fb);
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 16px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .delete {
+    cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: linear-gradient(to right, #9c27b0, #e040fb);
+    border: 0;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 16px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+@media (max-width: 600px) {
+  .form {
+    background-color: #ffffff;
+    width: 90%;
+
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+  }
+}
