--- a/src/pages/GoalDetailPage/GoalDetailPage.css
+++ b/src/pages/GoalDetailPage/GoalDetailPage.css
@@ -2,11 +2,34 @@
 .main {
     background-color: #FFFFFF;
     width: 50vw;
-    height: 100vh;
+    height: 100%;
     margin: 2em auto;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
+
+.edit-details{
+    display: flex;
+    flex-direction: column;
+    font-size: 19px;
+}
+
+.edit-streak{
+    display: flex;
+    justify-content: space-around;
+}
+
+.edit-description{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    margin: 5rem 8rem 0 8rem;
+}
+
+.edit-description p{
+    margin-bottom: 2rem;
+}
+
 
 .submit {
     cursor: pointer;
@@ -70,7 +93,7 @@
     .main {
         border-radius: 0px;
         width: 90vw;
-        height: 100vh;
+        
         border-radius: 1.5em;
     }
 }
