--- a/src/pages/SignupPage/AuthForms.css
+++ b/src/pages/SignupPage/AuthForms.css
@@ -4,6 +4,7 @@
     width: 400px;
     height: 400px;
     margin: 7em auto;
+    padding-bottom: 4rem;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
@@ -87,14 +88,16 @@ font-family: 'Ubuntu', sans-serif;
 
 .login-link{
     color: #9C27B0;
+    padding-bottom: 4rem;
 }
 
 
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
     .main {
         border-radius: 0px;
         width: 90vw;
         border-radius: 1.5em;
+        padding-bottom: 4rem;
     }
 }
